--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-/* for step 1 */
-
-.animationCard {
-  animation: abc 1s;
-}
-
-@keyframes abc {
-  from {
-    width: 900px;
-  }
-  to {
-    width: 900px;
-  }
-}
-
 .animationTop {
   animation: changePosition 2s;
 }
@@ -28,8 +13,6 @@
   }
 }
 
-/* for step 2 */
-
 .animationTop1 {
   animation: changePosition1 2s;
 }
@@ -44,21 +27,6 @@
     opacity: 0;
   }
 }
-
-.animationCard2 {
-  animation: abc2 1s;
-}
-
-@keyframes abc2 {
-  from {
-    width: 880px;
-  }
-  to {
-    width: 900px;
-  }
-}
-
-/* for step 3 */
 
 .animationTop2 {
   animation: changePosition2 2s;
@@ -76,9 +44,21 @@
   }
 }
 
+.animationCard2 {
+  animation: abc2 2s;
+}
+
+@keyframes abc2 {
+  from {
+    width: 880px;
+  }
+  to {
+    width: 900px;
+  }
+}
+
 .animationCard3 {
-  animation: abc3 1s;
-  height: 400px !important;
+  animation: abc3 2s;
 }
 
 @keyframes abc3 {
@@ -107,6 +87,8 @@
     opacity: 1;
   }
 }
+
+/* return animation */
 
 .animationReturn {
   animation: animationR 2s;
@@ -138,7 +120,8 @@
   }
 }
 
-.animationCard2Return {
+.animationCard2Return,
+.animationCardReturn {
   animation: animationReturnCard2 2s;
 }
 
@@ -152,17 +135,32 @@
   }
 }
 
-.animationCardReturn{
-  animation: animationReturnCard 2s;
+.returnAnimation1 {
+  animation: returnAnimation11 2s;
 }
 
-
-@keyframes animationReturnCard {
+@keyframes returnAnimation11 {
   from {
-    width: 880px;
+    width: 900px;
   }
 
   to {
+    width: 880px;
+  }
+}
+
+.returnAnimation2 {
+  animation: returnAnimation12 2s;
+}
+
+@keyframes returnAnimation12 {
+  from {
     width: 900px;
+    height: 400px;
+  }
+
+  to {
+    width: 860px;
+    height: 290px;
   }
 }
